<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_sign_in_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:autofillHints="@string/user"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_sign_in_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:autofillHints="@string/pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_text_sign_in_confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_pass"
        android:autofillHints="@string/confirm_pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_sign_in_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>