<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp" >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            android:layout_marginTop="38dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/user"
                android:hint="@string/user"
                android:layout_marginBottom="20dp"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_text_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/pass"
                android:hint="@string/pass"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_sign_ing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>